--- a/index.html
+++ b/index.html
@@ -71,6 +71,23 @@
         </div>
       </section>
 
+      <section id="billedegalleri">
+        <div class="section_wrapper">
+          <div class="col1">
+            <img src="baking_race_highres.jpg" alt="bilde1" />
+          </div>
+          <div class="col2">
+            <img src="wahid_01_highres.jpg" alt="bilde2" />
+          </div>
+          <div class="col3">
+            <img src="hanin_01_highres.jpg" alt="bilde3" />
+          </div>
+          <div class="col3">
+            <img src="rovdrift_highres.jpg" alt="bilde3" />
+          </div>
+        </div>
+      </section>
+
       <section id="section2">
         <!-- vidoe fra yt -->
         <iframe
