--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>TAG STEMNINGEN MED PÅ GROB</h1>
     </header>
     <main>
-      <h2>2 for 1 i hele mai!</h2>
+      <h2>2 for 1 i hele mai! hello</h2>
       <section id="section_2for1">
         <div class="section_wrapper">
   <div class="col2">
